--- a/index.html
+++ b/index.html
@@ -183,6 +183,13 @@
             </div>
         </section>
     </main>
+     <!-- Footer -->
+     <footer>
+        <div class="container-fluid foot">
+            <p>&copy; Md Tanvirul Islam 2023. All Rights Reserved.</p>
+      
+          </div>
+      </footer>
 
 
 
